[gd_scene load_steps=2 format=3 uid="uid://dckldltq0oyfg"]

[ext_resource type="Script" path="res://scripts/unit_stats_popup.gd" id="1_7o1im"]

[node name="UnitStatsPopup" type="Node2D"]
script = ExtResource("1_7o1im")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_top = 111.0
offset_right = 300.0
offset_bottom = 411.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
offset_top = 13.0
offset_right = 40.0
offset_bottom = 53.0
scale = Vector2(8.64, 3.8)
color = Color(0.244776, 0.244776, 0.244776, 1)

[node name="LevelLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
offset_left = 22.0
offset_top = 50.0
offset_right = 122.0
offset_bottom = 75.0
text = "Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackDamageLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
offset_left = 22.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 125.0
text = "Att Dam"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackSpeedLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
offset_left = 22.0
offset_top = 125.0
offset_right = 122.0
offset_bottom = 150.0
text = "Att Speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
offset_left = 22.0
offset_top = 75.0
offset_right = 122.0
offset_bottom = 100.0
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
offset_left = 120.0
offset_top = 13.0
offset_right = 220.0
offset_bottom = 38.0
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1
